feat: filter bookmarks with document id.
